[tool.poetry]
name = "django_snacks"
version = "0.1.0"
description = ""
authors = ["ehab-ahma <ehab24495@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"
flake8 = "^4.0.1"
black = "^21.10b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
